--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 
                 <button onclick="login()" id = "enter">enter site</button>
         </div>
+        <button id="button" onclick="download()">CLICK HERE for a 7 day free trial</button>
         </center>
 
     </body>
