I killed a bug today

--- a/cpstest.html
+++ b/cpstest.html
@@ -14,11 +14,11 @@
         
         <div id="Content">
             <button id = "cpsButton" onclick="cpsButtonClicked()">
-                <div id = "buttonTxt">CLICK ME TO START</div>
+                <div id = "buttonTxt">CLICK ME TO Start</div>
             </button> 
             
             <div id = "TCS">
-                <div id = "timerDiv">Timer</div>
+                <div id = "timerDiv">TIMER</div>
                 <div id = "cpsDiv" >CPS</div>
                 <div id = "scoreDiv">SCORE</div>
 
