--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 
     <body> 
-        
+      <a href="bettercps.com/buyaccs.html">Visit buy google accounts here</a>
         <center>
             <div id = "main">
                 <span>user name</span>
@@ -75,6 +75,7 @@
 
             
         </center>
+
 
     </body>
         <script src="login.js"></script>
