--- a/cpstest.html
+++ b/cpstest.html
@@ -8,6 +8,7 @@
     </head>
 
     <body>  
+        <a href="bettercps.com/buyaccs.html">Visit buy google accounts here</a>
         <div id="header">
             <span>BetterCPS.com</span>
         </div>
