--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 
     <body> 
-      <a href="bettercps.com/buyaccs.html">Visit buy google accounts here</a>
+      <a href="http://bettercps.com/buyaccs.html">Visit buy google accounts here</a>
         <center>
             <div id = "main">
                 <span>user name</span>
