--- a/buyaccs.html
+++ b/buyaccs.html
@@ -112,7 +112,7 @@
                 initPayPalButton();
                   </script>
                 </th>
-              <th><a href = "mailto: claimyouaccs@gmail.com">Contact U</a></th>
+              <th><a href = "mailto: claimyouaccs@gmail.com">Contact Us</a></th>
               <th></th>
             </tr>
             <tr>
