--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <body> 
       <a href="http://bettercps.com/buyaccs.html">Visit buy google accounts here</a>
+      
+      <a href="http://bettercps.com/math.html">Visit math help here</a>
         <center>
             <div id = "main">
                 <span>user name</span>
