--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body> 
       <a href="http://bettercps.com/buyaccs.html">Visit buy google accounts here</a>
       
-      <a href="http://bettercps.com/math.html">Visit math help here</a>
+      <a href="math.html">Visit math help here</a>
         <center>
             <div id = "main">
                 <span>user name</span>
