added scoreing 4 math

--- a/math.html
+++ b/math.html
@@ -24,7 +24,12 @@
         </td>
 
         <td>
-          <div><input id="name" maxlength="10" placeholder="Enter Name Here"type="text"></div>
+          <center>
+          <div>
+            <input id="name" maxlength="14" placeholder="Enter Name Here"type="text">
+            <button id = "submit">Subbmit</button>
+          </div>
+        </center>
         </td>
       </tr>
 
